--- a/a/all.css
+++ b/a/all.css
@@ -9,7 +9,7 @@ background-repeat:no-repeat}
 padding:0;
 padding:0}
 .page-30 img{position:absolute;bottom:0;left:0}.page-31{background-color:#fbf5e9}.page-32{background-color:#faf2e5}.page-33{background-color:#fef0d5;padding:0}.page-33 h3{font-size:1.8em;color:#a58545}
-.page-34{background:#4C316E url(../img/iali57.jpg) left bottom no-repeat}
+.page-34{background:#94c2e3 url(../img/iali57.jpg) left bottom no-repeat}
 .page-34 h3{color:#fff}
 .page-35{background:#fff url(../img/iali8_bg.png) left bottom repeat-x;padding:0}
 .page-35 img{position:absolute;bottom:0;left:0;z-index:1}
