--- a/a/all.css
+++ b/a/all.css
@@ -42,8 +42,9 @@ padding:0}
 .page-54{background:#d3d2d0 url(../img/319280_bg.jpg) repeat}
 .page-54 .center-img{background-image:url(../img/319280.jpg);
 text-indent: -10px}
-.page-54 h3{line-height: 1rem;padding-top: 0.5em}.page-55{background-color:#fff}
-
+.page-54 h3{line-height: 1rem;padding-top: 0.5em}
+.page-55{background-color:#fff}
+.page-55 .img1{right:0em;top:0em;height:100%;width:100%;}
 .write-tip{position: fixed;display: block;color: #333;font-size: 16px;bottom: 0.2em;left: 33%;padding: 3px;z-index: 999;background-color: #fff;border: 1px solid #D3D3D3;border-radius: 4px}
 .write-tip img{vertical-align: -2px;margin-left: 5px;cursor:pointer}
 .write-tip button{color: #fff;font-size: 15px;display: inline-block;background-color: #428bca;padding: 6px 12px;margin-left: 5px;vertical-align: 1px;border: 1px solid #357ebd;border-radius: 4px;outline:none;cursor:pointer}
